# bennett-legal-migration

./: .env.example  API.md  README.md  document_indexer_cli.py  document_indexer_daemon.py  generate_alter_tables.py  main.py  pyproject.toml  run_document_migration.sh  run_migration.sh  test_dry_run.sh
src/indexing/: __init__.py  api.py  document_indexer.py  models.py  query_interface.py  turbopuffer_client.py
src/migration/: __init__.py  cli.py
src/migration/core/: __init__.py  document_updater.py  gcs_mapper.py  schema_migrator.py  supabase_migrator.py
src/migration/models/: __init__.py  config.py  migration.py
src/migration/utils/: config_loader.py
tests/: __init__.py  test_config.py  test_gcs_mapper.py
